--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </head>
 <body>
     <!-- 顶部提醒栏 -->
-    <div id="top-advertisement">
-        <div class="text-box clear-fix">
-            <div class="j-ad">网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！ <a href="">立即查看&gt;</a></div>
-            <a class="j-close"><em>x</em> 不再提醒</a>
+    <div id="top-ad">
+        <div class="box clear-fix">
+            <div class="more">网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！ <a href="">立即查看&gt;</a></div>
+            <a class="close"><span>×</span> 不再提醒</a>
         </div>
     </div>
     <!-- 顶部导航 -->
     <div id="nav"> 
         <div class="nav-box clear-fix" >
-            <a href=""><img class="logo1" src="img/logo1.png" alt=""></a>
-            <a class="focus" href=""><em>+</em>关注</a>
-            <span class="fans">粉丝 45</span>
-            <div class="fl-right clear-fix">
-                <a href="">网易公开课</a>
-                <a href="">云课堂</a>
-                <a class="mooc" href="">中国大学MOOC</a>
-                <a class="nav-search"></a>
+            <a href=""><img class="nav-logo" src="img/logo1.png" alt=""></a>
+            <a class="nav-focus" href=""><em>+</em>关注</a>
+            <span class="nav-fans">粉丝 45</span>
+            <div class="nav-menu clear-fix">
+                <a href="http://open.163.com/">网易公开课</a>
+                <a href="http://study.163.com/">云课堂</a>
+                <a class="mooc" href="http://www.icourse163.org/">中国大学MOOC</a>
+                <div class="nav-search"></div>
             </div>
         </div>
     </div>
@@ -33,13 +33,69 @@
         <img src="img/banner1.jpg" alt="">
     </div>
     <!-- 平台介绍 -->
+    <div class="index-promotion">
+        <ul class="promotion-box clear-fix">
+            <li class="promotion-item">
+                <div class="logo logo1"></div>
+                <h2>网易公开课</h2>
+                <p >推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。
+                    <br><br><a href="http://open.163.com/">了解更多 &gt;</a>
+                </p>
+            </li>
+            <li class="promotion-item">
+                <div class="logo logo2"></div>
+                <h2>云课堂</h2>
+                <p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。
+                    <br><br><a href="http://study.163.com/">了解更多 &gt;</a>
+                </p>
+            </li>
+            <li class="promotion-item">
+                <div class="logo logo3"></div>
+                <h2>中国大学MOOC</h2>
+                <p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人,都可以在这里学习中国最好的大学课程，学完还能获得认证证书。
+                    <br><br><a href="http://www.icourse163.org/">了解更多 &gt;</a>
+                </p>
+            </li>
+        </ul>
+    </div>
     <!-- 多列图 -->
     <div class="m-column">
-        
+        <div class="container clear-fix">
+            <div class="box"><img src="img/pic1.jpg" alt=""></div>
+            <div class="box"><img src="img/pic2.jpg" alt=""></div>
+            <div class="box"><img src="img/pic3.jpg" alt=""></div>
+            <div class="box"><img src="img/pic4.jpg" alt=""></div>
+            <div class="box"><img src="img/pic5.jpg" alt=""></div>
+        </div>
     </div>
     <!--  页脚 -->
     <div id="footer">
-        
+        <div class="footer-box clear-fix">
+            <div class="footer-information">
+                <div class="logo"></div>
+                <p>©2014 icourse163.org 浙ICP备08114786号-1</p>
+                <p>icourses.cn 京ICP备12020869号-2 京公网安备110102000459-2</p>
+            </div>
+            <div class="footer-hotlink">
+                <dl>
+                    <dt>友情链接：</dt>
+                    <dd><a href="http://open.163.com/">网易公开课</a></dd>
+                    <dd><a href="http://study.163.com/">网易云课堂</a></dd>
+                    <dd><a href="http://www.icourse163.org/">中国大学MOOC</a></dd>
+                </dl>
+                <dl>
+                    <dt>我们：</dt>
+                    <dd><a href="">关于</a></dd>
+                    <dd><a href="">联系</a></dd>
+                    <dd class="weibo"><a href="http://weibo.com/study163/">关注<span class="weibo-logo"></span></a></dd>
+                </dl>
+                <dl>
+                    <dt>更多：</dt>
+                    <dd><a href="">常见问题</a></dd>
+                    <dd><a href="">意见反馈</a></dd>
+                </dl>
+            </div>
+        </div>
     </div>
 </body>
 </html>
