--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         </div>
     </div>
     <!-- 轮播图 -->
-    <div class="index-banner">
-        <img src="img/banner1.jpg" alt="">
+    <div id="index-banner">
+        <img class="item banner1" src="img/banner1.jpg" alt="">
+        <img class="item banner2 active" src="img/banner2.jpg" alt="">
+        <img class="item banner3" src="img/banner3.jpg" alt="">
+        <div class="pointer"><i></i><i></i><i></i></div>
     </div>
     <!-- 平台介绍 -->
     <div class="index-promotion">
@@ -97,5 +100,6 @@
             </div>
         </div>
     </div>
+    <script src="js/Javascript.js"></script>
 </body>
 </html>
