quick! quick! quick! - -

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- 顶部提醒栏 -->
     <div id="top-ad">
         <div class="box clear-fix">
-            <div class="more">网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！ <a href="">立即查看&gt;</a></div>
+            <div class="more">网易云课堂微专业，帮助你掌握专业技能，令你求职或加薪多一份独特优势！ <a href="http://study.163.com/smartSpec/intro.htm">立即查看&gt;</a></div>
             <a class="close"><span>×</span> 不再提醒</a>
         </div>
     </div>
     <!-- 顶部导航 -->
     <div id="nav"> 
         <div class="nav-box clear-fix" >
-            <a href=""><img class="nav-logo" src="img/logo1.png" alt=""></a>
+            <h2><a href=""><img class="nav-logo" src="img/logo1.png" alt=""></a></h2>
             <a class="nav-focus" href=""><em>+</em>关注</a>
             <span class="nav-fans">粉丝 45</span>
             <div class="nav-menu clear-fix">
@@ -30,10 +30,12 @@
     </div>
     <!-- 轮播图 -->
     <div id="index-banner">
-        <img class="item banner1" src="img/banner1.jpg" alt="">
-        <img class="item banner2 active" src="img/banner2.jpg" alt="">
-        <img class="item banner3" src="img/banner3.jpg" alt="">
-        <div class="pointer"><i></i><i></i><i></i></div>
+        <div class="banner-box">
+            <a class="item banner1" href=""><img src="img/banner1.jpg" alt=""></a>
+            <a class="item banner2 active" href=""><img src="img/banner2.jpg" alt=""></a>
+            <a class="item banner3" href=""><img src="img/banner3.jpg" alt=""></a>
+            <div class="pointer"><i></i><i></i><i></i></div>
+        </div>
     </div>
     <!-- 平台介绍 -->
     <div class="index-promotion">
@@ -69,6 +71,61 @@
             <div class="box"><img src="img/pic3.jpg" alt=""></div>
             <div class="box"><img src="img/pic4.jpg" alt=""></div>
             <div class="box"><img src="img/pic5.jpg" alt=""></div>
+        </div>
+    </div>
+    <!-- 主内容区域 -->
+    <div id="main" class="clear-fix">
+        <!-- 左侧区域 -->
+        <div class="main-content">
+            <ul class="m-classtab clear-fix">
+                <li class="design">产品设计</li>
+                <li class="language">编程语言</li>
+            </ul>
+            <div class="m-classlist">
+                <ul class="col">
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                </ul>
+                <ul class="col">
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                </ul>
+                <ul class="col">
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                </ul>
+                <ul class="col">
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                </ul>
+            </div>
+            <div class="m-pages"></div>
+        </div>
+        <!-- 边栏 -->
+        <div class="main-side">
+            <div class="m-organization">
+                <h2 class="title">机构介绍</h2>
+                <div class="video-box">
+                    <p>观看下面的视频来了解吧：</p>
+                    <div class="video">视频</div>
+                </div>
+            </div>
+            <div class="m-rank">
+                <h2 class="title">最热排行</h2>
+                <div class="rank-box">排行榜</div>
+            </div>            
         </div>
     </div>
     <!--  页脚 -->
