--- a/index.html
+++ b/index.html
@@ -77,41 +77,72 @@
     <div id="main" class="clear-fix">
         <!-- 左侧区域 -->
         <div class="main-content">
-            <ul class="m-classtab clear-fix">
-                <li class="design">产品设计</li>
-                <li class="language">编程语言</li>
+            <ul class="m-lessontab clear-fix">
+                <li class="current">产品设计</li>
+                <li >编程语言</li>
             </ul>
-            <div class="m-classlist">
-                <ul class="col">
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                </ul>
-                <ul class="col">
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                </ul>
-                <ul class="col">
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                </ul>
-                <ul class="col">
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                    <li class="item"></li>
-                </ul>
+            <div class="m-lessonlist">
+                <div class="col">
+                    <a href="" class="item">
+                        <img src="img/test01.png" alt="">
+                        <div class="text">
+                            <h3 class="title">混音全揭秘 舞曲实战篇 揭秘音乐揭秘啊啊啊</h3>
+                            <p class="item-text auth">音频帮</p>
+                            <p class="item-tex num">500</p>
+                            <p class="item-tex price">￥800.00</p>
+                        </div>
+                        <div class="m-lessonflow">
+                            <div class="clear-fix">
+                                <img src="img/test01.png" alt="">
+                                <div class="flow-text">
+                                    <h3 class="flow-title">手绘画系列教程</h3>
+                                    <p>57</p>
+                                    <p>几分钟网</p>
+                                    <p>手绘设计</p>
+                                </div>
+                            </div>
+                            <p class="description">生活中不乏有很多美好的画面，何不用画笔记录下来呢？那么就跟几分钟网一起来记录美好画面吧！</p>
+                        </div>
+                    </a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                </div>
+                <div class="col">
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                </div>
+                <div class="col">
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                </div>
+                <div class="col">
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                    <a href="" class="item"></a>
+                </div>
             </div>
-            <div class="m-pages"></div>
+            <div class="m-pages">
+                <span class=""></span>
+                <span>1</span>
+                <span>2</span>
+                <span>3</span>
+                <span>4</span>
+                <span>5</span>
+                <span>6</span>
+                <span>7</span>
+                <span>8</span>
+                <span class=""></span>
+            </div>
         </div>
         <!-- 边栏 -->
         <div class="main-side">
