--- a/index.html
+++ b/index.html
@@ -85,20 +85,20 @@
                 <div class="col">
                     <a href="" class="item">
                         <img src="img/test01.png" alt="">
-                        <div class="text">
-                            <h3 class="title">混音全揭秘 舞曲实战篇 揭秘音乐揭秘啊啊啊</h3>
+                        <div class="item-box">
+                            <h3 class="item-title">混音全揭秘 舞曲实战篇 揭秘音乐揭秘啊啊啊</h3>
                             <p class="item-text auth">音频帮</p>
-                            <p class="item-tex num">500</p>
-                            <p class="item-tex price">￥800.00</p>
+                            <p class="item-text num">500</p>
+                            <p class="item-text price">￥800.00</p>
                         </div>
                         <div class="m-lessonflow">
                             <div class="clear-fix">
                                 <img src="img/test01.png" alt="">
-                                <div class="flow-text">
+                                <div class="flow-box">
                                     <h3 class="flow-title">手绘画系列教程</h3>
-                                    <p>57</p>
-                                    <p>几分钟网</p>
-                                    <p>手绘设计</p>
+                                    <p class="flow-text num">57人在学</p>
+                                    <p class="flow-text auth">音频帮</p>
+                                    <p class="flow-text category">手绘设计</p>
                                 </div>
                             </div>
                             <p class="description">生活中不乏有很多美好的画面，何不用画笔记录下来呢？那么就跟几分钟网一起来记录美好画面吧！</p>
