--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <li class="current">产品设计</li>
                 <li >编程语言</li>
             </ul>
-            <div class="m-lessonlist">
+            <div class="m-lessonlist clear-fix">
                 <div class="col">
                     <a href="" class="item">
                         <img src="img/test01.png" alt="">
@@ -97,8 +97,8 @@
                                 <div class="flow-box">
                                     <h3 class="flow-title">手绘画系列教程</h3>
                                     <p class="flow-text num">57人在学</p>
-                                    <p class="flow-text auth">音频帮</p>
-                                    <p class="flow-text category">手绘设计</p>
+                                    <p class="flow-text auth">发布者：音频帮</p>
+                                    <p class="flow-text category">分类：手绘设计</p>
                                 </div>
                             </div>
                             <p class="description">生活中不乏有很多美好的画面，何不用画笔记录下来呢？那么就跟几分钟网一起来记录美好画面吧！</p>
@@ -132,16 +132,7 @@
                 </div>
             </div>
             <div class="m-pages">
-                <span class=""></span>
-                <span>1</span>
-                <span>2</span>
-                <span>3</span>
-                <span>4</span>
-                <span>5</span>
-                <span>6</span>
-                <span>7</span>
-                <span>8</span>
-                <span class=""></span>
+                <a class="page-go">&lt;</a><a class="page-num">1</a><a class="page-num">2</a><a class="page-num current">3</a><a class="page-num">4</a><a class="page-num">5</a><a class="page-num">6</a><a class="page-num">7</a><a class="page-num">8</a><a class="page-go">&gt;</a>
             </div>
         </div>
         <!-- 边栏 -->
