--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <div class="login-box">
             <h2 class="login-title">登录网易云课堂</h2>
             <form id="login-form" action="">
-                <input id="name" value="帐号" type="text" onclick="login.cleanUserName()">
-                <input id="password" value="密码" type="text" onclick="login.cleanPassword()">
+                <input id="name" value="帐号" type="text">
+                <input id="password" value="密码" type="text">
                 <button id="signin" type="submit">登 录</button>
             </form>
+            <p class="login-error">用户名或密码错误</p>
             <a class="close" onclick="login.close()"></a>
         </div>
     </div>
