video and rank done

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <div class="nav-unfocus" href=""><i></i>已关注 <span>|</span> <a id="unfocus">取消</a></div>
             <span class="nav-fans">粉丝 45</span>
             <div class="nav-menu clear-fix">
-                <a href="http://open.163.com/">网易公开课</a>
-                <a href="http://study.163.com/">云课堂</a>
-                <a class="mooc" href="http://www.icourse163.org/">中国大学MOOC</a>
+                <a href="http://open.163.com/" target="_blank">网易公开课</a>
+                <a href="http://study.163.com/" target="_blank">云课堂</a>
+                <a class="mooc" href="http://www.icourse163.org/" target="_blank">中国大学MOOC</a>
                 <div class="nav-search"></div>
             </div>
         </div>
@@ -60,21 +60,21 @@
                 <div class="logo logo1"></div>
                 <h2>网易公开课</h2>
                 <p >推出国内外名校公开课，涉及广泛的学科，名校老师认真讲解深度剖析，网易视频公开课频道搭建起强有力的网络视频教学平台。
-                    <br><br><a href="http://open.163.com/">了解更多 &gt;</a>
+                    <br><br><a href="http://open.163.com/" target="_blank">了解更多 &gt;</a>
                 </p>
             </li>
             <li class="promotion-item">
                 <div class="logo logo2"></div>
                 <h2>云课堂</h2>
                 <p>网易旗下大型在线学习平台，该平台面向学习者提供海量免费、优质课程,创新的个性化学习体验，自由开放的交流互动环境。
-                    <br><br><a href="http://study.163.com/">了解更多 &gt;</a>
+                    <br><br><a href="http://study.163.com/" target="_blank">了解更多 &gt;</a>
                 </p>
             </li>
             <li class="promotion-item">
                 <div class="logo logo3"></div>
                 <h2>中国大学MOOC</h2>
                 <p>是爱课程网携手云课堂打造的在线学习平台，每一个有提升愿望的人,都可以在这里学习中国最好的大学课程，学完还能获得认证证书。
-                    <br><br><a href="http://www.icourse163.org/">了解更多 &gt;</a>
+                    <br><br><a href="http://www.icourse163.org/" target="_blank">了解更多 &gt;</a>
                 </p>
             </li>
         </ul>
@@ -537,12 +537,127 @@
                 <h2 class="title">机构介绍</h2>
                 <div class="video-box">
                     <p>观看下面的视频来了解吧：</p>
-                    <div class="video">视频</div>
+                    <a class="video-img" onclick="openVideoPage()">
+                        <img src="img/video.jpg" alt="">
+                        <div class="icon"></div>
+                    </a>
+                    <div id="video-page">
+                        <div class="mask"></div>
+                        <div class="video-content">
+                            <h2>请观看下面的视频</h2>
+                            <video src="http://mov.bn.netease.com/open-movie/nos/mp4/2014/12/30/SADQ86F5S_shd.mp4" width=960 height=540 controls></video>
+                            <a class="close" onclick="closeVideoPage()"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="m-rank">
                 <h2 class="title">最热排行</h2>
-                <div class="rank-box">排行榜</div>
+                <div class="rank-box">
+                    <ul>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                        <li class="item">
+                            <img src="" alt="">
+                            <h3 class="item-name"></h3>
+                            <p class="num"></p>
+                        </li>
+                    </ul>
+                </div>
             </div>            
         </div>
     </div>
