--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     <!-- 轮播图 -->
     <div id="index-banner">
         <div class="banner-box">
-            <a class="item banner1" href=""><img src="img/banner1.jpg" alt=""></a>
-            <a class="item banner2 active" href=""><img src="img/banner2.jpg" alt=""></a>
-            <a class="item banner3" href=""><img src="img/banner3.jpg" alt=""></a>
-            <div class="pointer"><i></i><i></i><i></i></div>
+            <a class="item active" href="http://open.163.com/" target="_blank" style="opacity: 0;"><img src="img/banner1.jpg" alt=""></a>
+            <a class="item" href="http://study.163.com/" target="_blank" style="opacity: 0;"><img src="img/banner2.jpg" alt=""></a>
+            <a class="item" href="http://www.icourse163.org/" target="_blank" style="opacity: 1;"><img src="img/banner3.jpg" alt=""></a>
+            <div class="pointer"><i class="cur" onclick="bannerControl(1)"></i><i onclick="bannerControl(2)"></i><i onclick="bannerControl(3)"></i></div>
         </div>
     </div>
     <!-- 平台介绍 -->
@@ -554,7 +554,7 @@
             <div class="m-rank">
                 <h2 class="title">最热排行</h2>
                 <div class="rank-box">
-                    <ul>
+                    <ul style="bottom: 0;">
                         <li class="item">
                             <img src="" alt="">
                             <h3 class="item-name"></h3>
@@ -672,9 +672,9 @@
             <div class="footer-hotlink">
                 <dl>
                     <dt>友情链接：</dt>
-                    <dd><a href="http://open.163.com/">网易公开课</a></dd>
-                    <dd><a href="http://study.163.com/">网易云课堂</a></dd>
-                    <dd><a href="http://www.icourse163.org/">中国大学MOOC</a></dd>
+                    <dd><a href="http://open.163.com/" target="_blank">网易公开课</a></dd>
+                    <dd><a href="http://study.163.com/" target="_blank">网易云课堂</a></dd>
+                    <dd><a href="http://www.icourse163.org/" target="_blank">中国大学MOOC</a></dd>
                 </dl>
                 <dl>
                     <dt>我们：</dt>
